Align correctly  the header text

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -11,7 +11,10 @@ body {
   background: darkmagenta;
   color: white;
   padding: 0 15px;
-  
+  font-size: xx-large;
+  font-weight: 900;
+  box-sizing: border-box;
+  padding: 15px 15px;
 }
 
 .footer {
